jquery and jstree plugins

--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -388,6 +388,16 @@
 		 	<artifactId>dirigible-resources-goldenlayout</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-resources-jquery</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-resources-jstree</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 
 		<!-- External -->
 		<dependency>
