--- a/pom.xml
+++ b/pom.xml
@@ -403,14 +403,14 @@
 		<module>modules/runtime-repository</module>
 		<module>modules/runtime-registry</module>
 		<module>modules/runtime-extensions</module>
-		<module>modules/runtime-git</module>
+		
 		<module>modules/runtime-databases</module>
 		<module>modules/runtime-security</module>
 		<module>modules/runtime-theme</module>
 
 		<module>modules/runtime-ide-workspaces</module>
 		<module>modules/runtime-ide-terminal</module>
-		
+		<module>modules/runtime-ide-git</module>
 		<module>modules/runtime-ide-console</module>
 		<module>modules/runtime-ide-publisher</module>
 
