--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -38,7 +38,7 @@
 		<module>ide-core</module>
 		<module>ide-terminal</module>
 		<module>ide-console</module>
-		<module>ide-editor-orion</module>
+		<module>ide-orion</module>
 		<module>ide-swagger</module>
 		<module>ide-workspace</module>
 		<module>ide-preview</module>
