--- a/pom.xml
+++ b/pom.xml
@@ -440,7 +440,8 @@
 		
 		<module>resources</module>
 
-		<module>releng/war-all</module>
+		<module>releng/server-all</module>
+		<module>releng/server-runtime</module>
 		<module>releng/desktop-all</module>
 	</modules>
 
