--- a/releng/Dockerfile-tomcat
+++ b/releng/Dockerfile-tomcat
@@ -4,7 +4,7 @@
 FROM tomcat:8.5.8-jre8
  
 RUN rm -R /usr/local/tomcat/webapps/*
-COPY war-all/target/ROOT.war $CATALINA_HOME/webapps/
+COPY server-all/target/ROOT.war $CATALINA_HOME/webapps/
 RUN rm /usr/local/tomcat/conf/tomcat-users.xml
 RUN wget http://www.dirigible.io/help/conf/tomcat-users.xml -P /usr/local/tomcat/conf/
  
