--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -62,7 +62,7 @@
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-auth</artifactId>
+            <artifactId>dirigible-api-security</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
         <dependency>
@@ -93,7 +93,7 @@
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-javascript-auth</artifactId>
+            <artifactId>dirigible-api-javascript-security</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
         <dependency>
