--- a/modules/runtime-ide-databases/pom.xml
+++ b/modules/runtime-ide-databases/pom.xml
@@ -57,7 +57,7 @@
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-api-auth</artifactId>
+            <artifactId>dirigible-api-security</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
     </dependencies>
