--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -240,7 +240,7 @@
 		<!-- API Facades -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-api-auth</artifactId>
+		 	<artifactId>dirigible-api-security</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		<dependency>
@@ -476,7 +476,7 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-api-javascript-auth</artifactId>
+		 	<artifactId>dirigible-api-javascript-security</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		<dependency>
