--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -39,7 +39,7 @@
 		<module>api-core</module>
 		<module>api-http</module>
 		<module>api-utils</module>
-		<module>api-auth</module>
+		<module>api-security</module>
 		<module>api-db</module>
 		<module>api-io</module>
 	</modules>
