--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -419,6 +419,11 @@
 		 	<artifactId>dirigible-runtime-ide-git</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-runtime-ide-generation</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		
 		<!-- Engines Services -->
