--- a/pom.xml
+++ b/pom.xml
@@ -422,6 +422,7 @@
 		<module>modules/core-scheduler</module>
 		<module>modules/core-publisher</module>
 		<module>modules/core-workspace</module>
+		<module>modules/core-messaging</module>
 
 		<module>modules/runtime-core</module>
 		<module>modules/runtime-repository</module>
