api messaging javascript - initial

--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -42,6 +42,7 @@
 		<module>api-security</module>
 		<module>api-db</module>
 		<module>api-io</module>
+		<module>api-messaging</module>
 	</modules>
 
 	<profiles>
