--- a/api/api-facades/pom.xml
+++ b/api/api-facades/pom.xml
@@ -22,6 +22,7 @@
 		<module>api-tests</module>
 		<module>api-utils</module>
 		<module>api-io</module>
+		<module>api-messaging</module>
 	</modules>
 
 </project>
