--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -268,6 +268,11 @@
 		 	<artifactId>dirigible-api-io</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-messaging</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Repository -->
 		<dependency>
@@ -348,6 +353,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-core-publisher</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-core-messaging</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
@@ -492,6 +502,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-javascript-io</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-messaging</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
