--- a/modules/database-data-models/pom.xml
+++ b/modules/database-data-models/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Core - Scheduler</name>
-	<artifactId>dirigible-core-scheduler</artifactId>
+	<name>Database - Data Models</name>
+	<artifactId>dirigible-database-data-models</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -29,7 +29,12 @@
     </build>
     
     <dependencies>
-    	<dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-commons-config</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-commons-api</artifactId>
 			<version>${dirigible.version}</version>
@@ -41,11 +46,6 @@
 		</dependency>
 		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-database-data-models</artifactId>
-			<version>${dirigible.version}</version>
-    	</dependency>
-		<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-database-persistence</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
@@ -54,11 +54,11 @@
             <artifactId>dirigible-repository-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
-    	<dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-api-security</artifactId>
-			<version>${dirigible.version}</version>
-    	</dependency>
+        <dependency>
+		    <groupId>commons-codec</groupId>
+		    <artifactId>commons-codec</artifactId>
+		    <version>${commons.codec}</version>
+		</dependency>
     	
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
@@ -72,12 +72,12 @@
 			<version>${dirigible.version}</version>
 			<scope>test</scope>
     	</dependency>
-    	
     	<dependency>
-		    <groupId>org.quartz-scheduler</groupId>
-		    <artifactId>quartz</artifactId>
-		    <version>2.3.0</version>
-		</dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
