--- a/modules/database-data-structures/pom.xml
+++ b/modules/database-data-structures/pom.xml
@@ -46,6 +46,11 @@
 		</dependency>
 		<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-database-data-models</artifactId>
+			<version>${dirigible.version}</version>
+    	</dependency>
+		<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-database-persistence</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
