--- a/pom.xml
+++ b/pom.xml
@@ -411,6 +411,7 @@
 		<module>modules/database-api</module>
 		<module>modules/database-sql</module>
 		<module>modules/database-persistence</module>
+		<module>modules/database-data-models</module>
 		<module>modules/database-data-structures</module>
 
 		<module>modules/database-derby</module>
