--- a/modules/runtime-core/pom.xml
+++ b/modules/runtime-core/pom.xml
@@ -74,6 +74,12 @@
 			<version>${dirigible.version}</version>
 			<scope>test</scope>
     	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-repository-local</artifactId>
+			<version>${dirigible.version}</version>
+			<scope>test</scope>
+    	</dependency>
     </dependencies>
 
 </project>
