--- a/pom.xml
+++ b/pom.xml
@@ -424,6 +424,7 @@
 		<module>modules/core-publisher</module>
 		<module>modules/core-workspace</module>
 		<module>modules/core-messaging</module>
+		<module>modules/core-indexing</module>
 
 		<module>modules/runtime-core</module>
 		<module>modules/runtime-repository</module>
