--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -43,6 +43,7 @@
 		<module>api-db</module>
 		<module>api-io</module>
 		<module>api-messaging</module>
+		<module>api-indexing</module>
 	</modules>
 
 	<profiles>
