--- a/api/api-facades/api-tests/pom.xml
+++ b/api/api-facades/api-tests/pom.xml
@@ -90,6 +90,11 @@
             <artifactId>dirigible-api-io</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-indexing</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
         
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
@@ -119,6 +124,11 @@
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-javascript-io</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-api-javascript-indexing</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
         
