--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -109,6 +109,11 @@
 		 	<artifactId>dirigible-api-messaging</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-indexing</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Repository -->
 		<dependency>
@@ -199,6 +204,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-core-messaging</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-core-indexing</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
@@ -310,6 +320,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-javascript-messaging</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-indexing</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
