api/logging module integration

--- a/api/api-facades/pom.xml
+++ b/api/api-facades/pom.xml
@@ -24,6 +24,7 @@
 		<module>api-io</module>
 		<module>api-messaging</module>
 		<module>api-indexing</module>
+		<module>api-log</module>
 	</modules>
 
 </project>
