--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -278,6 +278,11 @@
 		 	<artifactId>dirigible-api-indexing</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-log</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>		
 		
 		<!-- Repository -->
 		<dependency>
@@ -527,6 +532,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-javascript-indexing</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-log</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
