--- a/releng/server-all/pom.xml
+++ b/releng/server-all/pom.xml
@@ -114,6 +114,11 @@
 		 	<artifactId>dirigible-api-indexing</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-log</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>		
 		
 		<!-- Repository -->
 		<dependency>
@@ -363,6 +368,11 @@
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-api-javascript-indexing</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-log</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
 		
