test controller api integrated in dirigible

--- a/api/api-javascript/pom.xml
+++ b/api/api-javascript/pom.xml
@@ -45,6 +45,7 @@
 		<module>api-messaging</module>
 		<module>api-indexing</module>
 		<module>api-log</module>
+		<module>api-test</module>
 	</modules>
 
 	<profiles>
