--- a/releng/desktop-all/pom.xml
+++ b/releng/desktop-all/pom.xml
@@ -539,6 +539,11 @@
 		 	<artifactId>dirigible-api-javascript-log</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-test</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- IDE Plugins -->
 		<dependency>
