--- a/releng/server-runtime/pom.xml
+++ b/releng/server-runtime/pom.xml
@@ -334,9 +334,14 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
-		 	<artifactId>dirigible-api-log</artifactId>
+		 	<artifactId>dirigible-api-javascript-log</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-api-javascript-test</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>		
 		
 		<!-- Resources Plugins -->
 		<dependency>
