--- a/releng/server-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/server-all/src/main/webapp/WEB-INF/web.xml
@@ -3,6 +3,12 @@
 	xmlns="http://java.sun.com/xml/ns/javaee"
 	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd"
 	version="3.0">
+	
+	<display-name>Eclipse Dirigible - Cloud Development Platform</display-name>
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+	</welcome-file-list>
+	
 	<listener>
 		<listener-class>org.eclipse.dirigible.runtime.core.listener.DirigibleServletContextListener</listener-class>
 	</listener>
@@ -77,6 +83,43 @@
 		<res-sharing-scope>Shareable</res-sharing-scope>
 	</resource-ref> -->
 	
+	<login-config>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+         	<form-login-page>/login-form.html</form-login-page>
+            <form-error-page>/login-error.html</form-error-page>
+    	</form-login-config>
+    </login-config>
+
+	<!-- Error Pages -->     
+    <error-page>
+	    <error-code>403</error-code>
+	    <location>/403.html</location>
+	</error-page>
+	<error-page>
+	    <error-code>404</error-code>
+	    <location>/404.html</location>
+	</error-page>
+	<error-page>
+	    <location>/error.html</location>
+	</error-page>
+	
+	<!-- Landing Page -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Landing Page</web-resource-name>
+			<url-pattern>/index.html</url-pattern>
+		</web-resource-collection>
+	</security-constraint>
+	
+	<!-- Themes -->
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>Themes</web-resource-name>
+			<url-pattern>/services/v3/core/theme/*</url-pattern>
+		</web-resource-collection>
+	</security-constraint>
+	
 	<security-constraint>
 	    <web-resource-collection>
 	        <web-resource-name>Engine Services</web-resource-name>
@@ -123,10 +166,6 @@
 	        <role-name>Operator</role-name>
 	    </auth-constraint>
 	</security-constraint>
-	
-	<login-config>
-		<auth-method>BASIC</auth-method>
-	</login-config>
 	
 	<session-config>
 		<session-timeout>5</session-timeout>
