--- a/releng/desktop-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/desktop-all/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,17 @@
 	<session-config>
 		<session-timeout>1440</session-timeout>
 	</session-config>
+	
+	<!-- Error Pages -->     
+    <error-page>
+	    <error-code>403</error-code>
+	    <location>/403.html</location>
+	</error-page>
+	<error-page>
+	    <error-code>404</error-code>
+	    <location>/404.html</location>
+	</error-page>
+	<error-page>
+	    <location>/error.html</location>
+	</error-page>
 </web-app>
