--- a/releng/server-runtime/src/main/webapp/WEB-INF/web.xml
+++ b/releng/server-runtime/src/main/webapp/WEB-INF/web.xml
@@ -111,6 +111,7 @@
 		<web-resource-collection>
 			<web-resource-name>Themes</web-resource-name>
 			<url-pattern>/services/v3/core/theme/*</url-pattern>
+			<url-pattern>/services/v3/web/resources/*</url-pattern>
 		</web-resource-collection>
 	</security-constraint>
 	
