--- a/pom.xml
+++ b/pom.xml
@@ -450,6 +450,8 @@
 		<module>templates</module>
 
 		<module>resources</module>
+		
+		<module>ext</module>
 
 		<module>releng/server-all</module>
 		<module>releng/server-runtime</module>
