changed artifact name to comply with rest of the project

--- a/ext/ext-v3-qunit/pom.xml
+++ b/ext/ext-v3-qunit/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 
 	<name>Ext - QUnit</name>
-	<artifactId>ext-qunit</artifactId>
+	<artifactId>dirigible-ext-qunit</artifactId>
     <packaging>jar</packaging>
 
 	<scm>
